# python-web_hw_14

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 67bf3708e041_add_users_roles_change.py  688f0596c0ae_add_users_add_confirmed.py  70a1ff2fc77e_init.py  8e1753bea677_add_users_fields.py  a858e825a68f_add_users_roles.py  c5f1b0700872_add_users_optional_fields.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  users.py
src/services/: auth.py  cloud_image.py  mail.py  roles.py
src/services/templates/: mail_template.html
static/javascript/: app.js  register.js
templates/: index.html  main.html  signup.html
tests/: conftest.py  test_main.py  test_route_auth.py  test_unit_repository_users.py
